--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "uhost",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Web Hosting service",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "index.html"
   },
   "repository": {
     "type": "git",
